# mastermind

./: README.md  default.nix  hie.yaml  mastermind.cabal
app/: Main.hs
src/: Lib.hs  MmLib.hs
test/: LibSpec.hs  MmLibSpec.hs
