name: mastermind
version: 1.0.0
cabal-version: >= 1.18
build-type: Simple

library
  exposed-modules:
      Lib
  hs-source-dirs:
      src
  build-depends:
      base < 5
  default-language: Haskell2010

executable mastermind
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends:
      base < 5
    , transformers
    , trifecta
    , mastermind
  default-language: Haskell2010

test-suite test-mm
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      LibSpec
  hs-source-dirs:
      test
  build-depends:
      base < 5
    , mastermind
    , QuickCheck
    , hspec
    , hspec-discover
  default-language: Haskell2010

